Fixed layout issues.

--- a/gui/css/style.css
+++ b/gui/css/style.css
@@ -85,6 +85,16 @@ svg {
   padding-left: 5px;
 }
 
+#button-color-by {
+  width: 260px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 40px;
+  margin-bottom: 10px;
+  padding-left: 5px;
+}
+
+
 .button {
   cursor: pointer;
   float: left;
@@ -113,6 +123,10 @@ svg {
   height: 40px;
   margin-bottom: 10px;
   padding-left: 5px;
+}
+
+#colorBy {
+  background-color: #F0F0F5;
 }
 
 body { font: 12px Arial;}
